--- a/Munyn/Munyn.csproj
+++ b/Munyn/Munyn.csproj
@@ -24,11 +24,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AvaloniaXaml Update="Views\Nodes\AssetNodeView.axaml">
+      <SubType>Designer</SubType>
+    </AvaloniaXaml>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Views\Nodes\NetworkNodeView.axaml.cs">
       <DependentUpon>NetworkNodeView.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Nodes\HostNodeView.axaml.cs">
       <DependentUpon>HostNodeView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Nodes\AssetNodeView.axaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>AssetNodeView.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Nodes\ServiceNodeView.axaml.cs">
       <DependentUpon>ServiceNodeView.axaml</DependentUpon>
