Added ability to edit host nodes as well as click detection logic for selecting nodes

--- a/Munyn/Munyn.csproj
+++ b/Munyn/Munyn.csproj
@@ -41,6 +41,9 @@
       <SubType>Code</SubType>
       <DependentUpon>AssetNodeView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Nodes\NodeDetailsViews\HostNodeDetailsView.axaml.cs">
+      <DependentUpon>HostNodeDetailsView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Nodes\ServiceNodeView.axaml.cs">
       <DependentUpon>ServiceNodeView.axaml</DependentUpon>
     </Compile>
