--- a/Munyn/Munyn.csproj
+++ b/Munyn/Munyn.csproj
@@ -41,8 +41,8 @@
       <SubType>Code</SubType>
       <DependentUpon>AssetNodeView.axaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\Nodes\NodeDetailsViews\HostNodeDetailsView.axaml.cs">
-      <DependentUpon>HostNodeDetailsView.axaml</DependentUpon>
+    <Compile Update="Views\Nodes\NodeDetailsViews\NodeDetailsView.axaml.cs">
+      <DependentUpon>NodeDetailsView.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Nodes\ServiceNodeView.axaml.cs">
       <DependentUpon>ServiceNodeView.axaml</DependentUpon>
