--- a/Munyn/Munyn.csproj
+++ b/Munyn/Munyn.csproj
@@ -44,6 +44,9 @@
     <Compile Update="Views\Nodes\NodeDetails\NodeDetailsView.axaml.cs">
       <DependentUpon>NodeDetailsView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\NodeGraphViewProperty.axaml.cs">
+      <DependentUpon>NodeGraphViewProperty.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Nodes\ServiceNodeView.axaml.cs">
       <DependentUpon>ServiceNodeView.axaml</DependentUpon>
     </Compile>
