Added Initial load and save features

--- a/Munyn/Munyn.csproj
+++ b/Munyn/Munyn.csproj
@@ -11,6 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Assets\Icons\folder.svg" />
+    <None Remove="Assets\Icons\save-arrow.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.2" />
     <PackageReference Include="Avalonia.Desktop" Version="11.3.2" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.2" />
