Added menu for selecting the new property type

--- a/Munyn/Munyn.csproj
+++ b/Munyn/Munyn.csproj
@@ -45,5 +45,8 @@
     <Compile Update="Views\Panels\ExtrasTray.axaml.cs">
       <DependentUpon>ExtrasTray.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Panels\PropertySelectionView.axaml.cs">
+      <DependentUpon>PropertySelectionView.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
