--- a/Munyn/Munyn.csproj
+++ b/Munyn/Munyn.csproj
@@ -30,14 +30,42 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AvaloniaXaml Update="Views\Nodes\NodeDetails\Properties\DetailsView\NodeDetailsPropertyCompromisedView.axaml">
+      <SubType>Designer</SubType>
+    </AvaloniaXaml>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Views\Nodes\NetworkNodeView.axaml.cs">
       <DependentUpon>NetworkNodeView.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Nodes\NodeDetails\NodeDetailsView.axaml.cs">
       <DependentUpon>NodeDetailsView.axaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\Nodes\NodeDetails\NodeGraphViewProperty.axaml.cs">
-      <DependentUpon>NodeGraphViewProperty.axaml</DependentUpon>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\DetailsView\NodeDetailsPropertyCompromisedView.axaml.cs">
+      <SubType>Code</SubType>
+      <DependentUpon>NodeDetailsPropertyCompromisedView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\DetailsView\NodeDetailsPropertyCommandView.axaml.cs">
+      <DependentUpon>NodeDetailsPropertyCommandView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\DetailsView\NodeDetailsPropertyTextView.axaml.cs">
+      <DependentUpon>NodeDetailsPropertyTextView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\DetailsView\NodeDetailsPropertyBasicView.axaml.cs">
+      <DependentUpon>NodeDetailsPropertyBasicView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\GraphView\NodeGraphPropertyCompromisedView .axaml.cs">
+      <DependentUpon>NodeGraphPropertyCompromisedView .axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\GraphView\NodeGraphPropertyCommandView.axaml.cs">
+      <DependentUpon>NodeGraphPropertyCommandView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\GraphView\NodeGraphPropertyTextView.axaml.cs">
+      <DependentUpon>NodeGraphPropertyTextView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\GraphView\NodeGraphPropertyBasicView.axaml.cs">
+      <DependentUpon>NodeGraphPropertyBasicView.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Panels\AttackTray.axaml.cs">
       <DependentUpon>AttackTray.axaml</DependentUpon>
