--- a/Munyn/Munyn.csproj
+++ b/Munyn/Munyn.csproj
@@ -39,6 +39,9 @@
     <Compile Update="Views\Nodes\NodeDetails\NodeDetailsView.axaml.cs">
       <DependentUpon>NodeDetailsView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Nodes\NodeDetails\Properties\DetailsView\NodeDetailsPropertyHighValueView.axaml.cs">
+      <DependentUpon>NodeDetailsPropertyHighValueView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Nodes\NodeDetails\Properties\DetailsView\NodeDetailsPropertyCompromisedView.axaml.cs">
       <SubType>Code</SubType>
       <DependentUpon>NodeDetailsPropertyCompromisedView.axaml</DependentUpon>
